# personal-agent-pkg

./: .gitignore  .mcp.json  .mcp.json.template  CLAUDE.md  DEVELOPMENT_PLAN.md  MILESTONE_1.4_COMPLETE.md  TASKS.md  demo_agent_test.py  demo_claude_extension.py  demo_end_to_end.py  demo_improved.py  demo_notion_bridge.py  explain_real_vs_mock.py  main.py  pyproject.toml  simple_example.py
.claude/: agent-config.json
tests/unit/: test_base_agent.py  test_claude_extension.py  test_notion_zep_bridge.py  test_zep_memory_engine.py
